--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "stylus": "0.54.5"
   },
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "history": "4.2.0",
     "re-base": "2.2.0",
     "react": "15.3.2",
